# etl_optimizer

./: ENGINEERING_LOG.md  README.md  cli.py  flow.md  hello.md  hello_flow.md  hello_optimized.yaml  hello_world.yaml  optimized_ir.yaml  pyproject.toml  requirements.txt
src/etl_optimizer/: coordinator.py  promoter.py
src/exporters/: mermaid.py
src/ir/: model.py  types.py
src/optimizer/: collapser.py  promoter.py  validator.py
tests/fixtures/: raw_trace.yaml
tests/helpers/: interpreter.py
tests/integration/: test_optimization_pipeline.py  test_topology.py
tests/unit/: test_collapser_gc.py  test_collapser_isolated.py  test_collapser_wiring.py  test_coordinator.py  test_ingestion.py  test_security_validator.py  test_semantic_promoter.py  test_validator_islands.py  test_vertical_collapser.py
